<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RFID</string>
    <string name="title_activity_control">Main</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_logout">注销用户</string>
    <string name="title_activity_rej">拒料</string>
    <string name="title_activity_RFID_event">RFID 标签</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="submit">=</string>
    <string name="non_machine">Non-machine</string>
    <string name="dummy_button">dummy button</string>
    <string name="cancel">取消</string>
    <string name="title_activity_emt_log">Emt Log</string>
    <string name="title_activity_test">测试</string>
    <string name="title_activity_piece_part_load">向机台加载Piece Part</string>
    <string name="pls_select">请选择</string>
    <string name="button_cancel">取消</string>
    <string name="button_yes">是的</string>
    <string name="title_activity_piece_part_options">Piece Part</string>
    <string name="title_activity_piece_part_unload">从机台卸载Piece Part</string>
    <string name="clear">清空</string>
    <string name="ok">好</string>
    <string name="exit">退出</string>
    <string name="revoke">撤销</string>
    <string name="title_activity_mach_rfid_function">机台RFID功能</string>
    <string name="action_go_home">返回主页</string>
    <string name="title_activity_carrier_assign">添加/删除弹夹</string>
    <string name="title_activity_message">新消息</string>
    <string name="close">关闭</string>
    <string name="submit_all">提交所有修改</string>
    <string name="ignore">放弃修改</string>
    <string name="button_done">完成</string>
    <string name="button_submit">提交</string>
    <string name="loading_data">数据加载中</string>
    <string name="submitting_data">数据提交中</string>
    <string name="title_error">出错了</string>
    <string name="title_message">消息</string>
    <string name="title_activity_end_lot_on_mach">机台结料</string>
    <string name="title_activity_app_info">关于RFID</string>
    <string name="title_activity_in_out_carrier_assignment">In Out Carrier Assignment</string>
    <string name="title_activity_new_nfctag">NFC Tag</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="tag_or_lot">扫描RFID标签或条码</string>
    <string name="scan_barcode">扫描条码</string>
    <string name="scan_tag">扫描弹夹RFID标签</string>
    <string name="title_activity_end_lot">结料</string>
    <string name="title_lot_number">Lot 号:</string>
    <string name="title_current_mach_info">当前机台ID信息:</string>
    <string name="title_current_carrier_info">当前弹夹名称信息:</string>
    <string name="title_current_Pp_info">当前Piece Part信息:</string>
    <string name="carrier_id">Carrier ID</string>
    <string name="carrier_name">Carrier Name</string>
    <string name="defect_flag">Defect Flag</string>
    <string name="button_end">结料</string>
    <string name="pp_part_number">Part Num</string>
    <string name="pp_part_lot">P.Part Lot</string>
    <string name="pp_material_type">Matrl Type</string>
    <string name="title_success">成功</string>
    <string name="prompt_missing_carrier_num_spinner">弹夹实际缺少数量:</string>
    <string name="title_activity_wifi_config">无线网络 配置</string>
    <string name="search">查询</string>
    <string name="title_activity_check_magazine">核对物料弹夹</string>
    <string name="title_activity_cassette">提篮</string>
    <string name="title_activity_setting">设置</string>
    <string name="cassette_schedule_id">提篮 Schedule ID</string>
    <string name="title_activity_rej_mag">漏扫弹夹</string>
    <string name="title_activity_strip_inspection">条检</string>
    <string name="type">类型</string>
    <string name="title_activity_lot_carrier_hist">物料弹夹查询</string>
    <string name="title_activity_lot_carrier_report">物料弹夹报告</string>
    <string name="cancel_div_lot">取消分料</string>
    <string name="ok_div_lot">好的</string>
    <string name="know_div_lot">知道了</string>
    <string name="title_activity_div_lot">分料</string>
    <string name="title_activity_lot_div_progress">物料分料进度</string>
    <string name="title_activity_lot_rack_mgmt">Rack 找料</string>
    <string name="title_activity_pass_window">Pass Through Window</string>
    <string name="title_activity_message_test">历史消息汇总</string>
    <string name="title_activity_alarm_unset">清报警</string>
    <string name="title_activity_lot_pass_window">Pass Through Window 找料</string>
    <string name="title_activity_cassette_assign">提篮 Assign</string>
    <string name="title_activity_lot_carrier_tracking">AO Lot / Wafer Lot Carrier Tracking</string>
    <string name="title_activity_lot_carrier_tracking_deassign">Lot Carrier Tracking - Deassign</string>

</resources>
