<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dip" >

    <TextView
        android:id="@+id/tb_fragment_lot_number"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/tb_fragment_input"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/tag_or_lot"
        android:inputType="textCapCharacters"
        android:imeActionId="@+id/tb_fragment_search_t"
        android:imeActionLabel="@string/search"
        android:imeOptions="actionGo" />

    <Button
        android:id="@+id/tb_fragment_n7_scan_barcode"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/scan_barcode"
        android:visibility="gone" />

</LinearLayout>