<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/rejDescTextView"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="end"
        android:paddingBottom="8dip"
        android:paddingRight="8dip"
        android:paddingTop="12dip"
        android:textColor="#004080"
        android:textSize="20sp" />

    <Button
        android:id="@+id/rejPlusButton"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/plus" />

    <EditText
        android:id="@+id/rejQtyChange"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="start"
        android:inputType="number"
        android:hint="0"
        android:paddingBottom="8dip"
        android:paddingTop="12dip"
        android:textSize="20sp" />

    <Button
        android:id="@+id/rejMinusButton"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/minus" />

    <Button
        android:id="@+id/rejSubmitButton"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/rejQtyTotal"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="start"
        android:paddingBottom="8dip"
        android:paddingTop="12dip"
        android:textSize="20sp" />

</LinearLayout>