<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RejMagActivity" >

    <fragment
        android:id="@+id/rej_mag_load_status"
        android:name="com.fsl.cimei.rfid.DataLoadStatusFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal" />

    <RelativeLayout
        android:id="@+id/rej_mag_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <fragment
            android:id="@+id/rej_mag_tb_fragment"
            android:name="com.fsl.cimei.rfid.TagBarcodeInputFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" />
        
        <LinearLayout
            android:id="@+id/rej_mag_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true" >

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="#004080" />

            <LinearLayout
                android:id="@+id/rej_mag_ll1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/linear_layout_line"
                android:orientation="horizontal"
                android:padding="6dp" >

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mach_ID"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/rej_mag_mach_ID"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/pls_select"
                    android:textSize="20sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="#004080" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="6dp" >

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/type"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/rej_mag_type"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="6dp" >

                <Button
                    android:id="@+id/rej_mag_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_submit" />
            </LinearLayout>
        </LinearLayout>
        
        <ListView
            android:id="@+id/rej_mag_carrier_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/rej_mag_bottom"
            android:layout_below="@id/rej_mag_tb_fragment" />
    </RelativeLayout>

</merge>